test/types/records/bad-change-type/range-init1.good
range-init1.chpl:1: In function 'test':
range-init1.chpl:4: error: invalid copy-initialization
range-init1.chpl:4: error: initializing a range with strideKind.one from a range with strideKind.positive
